--- a/css.css
+++ b/css.css
@@ -12,4 +12,17 @@ h1{
     padding-top: 1%;
     padding-bottom: 1%;
     background-color: rgb(230, 227, 227);
+    display: flex;
+    flex-wrap: wrap;
 }
+
+.bal{
+    width: 30%;
+}
+.jobb{
+    width: 60%;
+}
+.sor{
+    width: 70%;
+}
+
