--- a/css.css
+++ b/css.css
@@ -1,8 +1,12 @@
+body{
+    font-size: 1vw;
+    color:blue;
+}
 h1{
     padding: 1%;
     text-align: center;
     color:blue;
-    font-size: 3vw;
+    font-size: 2.5vw;
 }
 
 .container{
@@ -17,12 +21,33 @@ h1{
 }
 
 .bal{
-    width: 30%;
+    width: 40%;
 }
 .jobb{
-    width: 60%;
+    width: 80%;
 }
 .sor{
-    width: 70%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+}
+input{
+    margin: 10px;
 }
 
+input[type=button]{
+    width: 20%;
+    
+}
+
+input[type=select]{
+    width: 8%;
+}
+input[type=number]{
+    width: 70%;
+}
+input[type=radio]{
+    width: 3%;
+    
+}
