--- a/css.css
+++ b/css.css
@@ -1,16 +1,16 @@
 body{
-    font-size: 1vw;
+    font-size: 0.9vw;
     color:blue;
 }
 h1{
-    padding: 1%;
+    padding: 0%;
     text-align: center;
     color:blue;
     font-size: 2.5vw;
 }
 
 .container{
-    margin: 0 25% ;
+    margin: 0 22% ;
     padding-left: 10%;
     padding-right: 10%;
     padding-top: 1%;
@@ -38,16 +38,67 @@ input{
 
 input[type=button]{
     width: 20%;
-    
+    display: block;
+    margin: 1% auto;
 }
 
 input[type=select]{
     width: 8%;
 }
 input[type=number]{
-    width: 70%;
+    width: 10%;
 }
 input[type=radio]{
-    width: 3%;
-    
+    width: 4%;
+    margin: 2%;
+}
+input[type=text]{
+    width: 90%;
+    height: 3rem;
+}
+
+.sor:nth-child(1){
+    border-top: 1px solid black;
+}
+input[type=date]{
+    width: 60%;
+}
+
+@media only screen and (max-width: 1100px){
+    .container{
+        margin: 0 10%;
+    }
+    body{
+        font-size: 1.5vw;
+    }
+}
+@media only screen and (max-width: 750px){
+    body{
+        font-size: 2vw;
+    }
+    input[type=button]{
+        width: 40%;
+        display: block;
+        margin: 1% auto;
+    }
+    h1{
+        font-size: 4vw;
+    }
+}
+@media only screen and (max-width: 500px){
+    h1{
+    font-size: 6vw;
+}
+.container{
+    margin:0;
+    font-size: 5vw;
+
+}
+.bal{
+    width: 100%;
+}
+.jobb{
+    width: 100%;
+}
+
 }
